--- a/src/app/shared/component/extra-data/extra-data.component.html
+++ b/src/app/shared/component/extra-data/extra-data.component.html
@@ -40,8 +40,8 @@
                 <td>
                     <span [innerText]="'GENSHIN.DMG.'+propNameMap[prop] | translate"></span>
                 </td>
-                <td [matTooltip]="info[prop] + ''" matTooltipPosition="right">
-                    <span [innerText]="info[prop] | truncate"></span>
+                <td>
+                    <span [innerText]="info[prop] | truncate" [matTooltip]="info[prop] + ''" matTooltipPosition="right"></span>
                     <br>
                 </td>
             </tr>
@@ -56,8 +56,8 @@
                 <td>
                     <span [innerText]="'GENSHIN.OTHER.'+propNameMap[prop] | translate"></span>
                 </td>
-                <td [matTooltip]="info[prop] + ''" matTooltipPosition="right">
-                    <span [innerText]="info[prop] | truncate"></span>
+                <td>
+                    <span [innerText]="info[prop] | truncate" [matTooltip]="info[prop] + ''" matTooltipPosition="right"></span>
                     <br>
                 </td>
             </tr>
@@ -72,8 +72,8 @@
                 <td>
                     <span [innerText]="'GENSHIN.OTHER.'+propNameMap[prop] | translate"></span>
                 </td>
-                <td [matTooltip]="info[prop] + ''" matTooltipPosition="right">
-                    <span [innerText]="info[prop] | truncate"></span>
+                <td>
+                    <span [innerText]="info[prop] | truncate" [matTooltip]="info[prop] + ''" matTooltipPosition="right"></span>
                     <br>
                 </td>
             </tr>
@@ -88,8 +88,8 @@
                 <td>
                     <span [innerText]="'GENSHIN.OTHER.'+propNameMap[prop] | translate"></span>
                 </td>
-                <td [matTooltip]="info[prop] + ''" matTooltipPosition="right">
-                    <span [innerText]="info[prop] | truncate"></span>
+                <td>
+                    <span [innerText]="info[prop] | truncate" [matTooltip]="info[prop] + ''" matTooltipPosition="right"></span>
                     <br>
                 </td>
             </tr>
