--- a/src/app/features/character/component/weapon/weapon.component.html
+++ b/src/app/features/character/component/weapon/weapon.component.html
@@ -51,16 +51,22 @@
                 <table>
                     <tr *ngFor="let prop of props">
                         <td class="content-left" [innerText]="'PROPS.' + prop | translate"></td>
-                        <td class="content-right"
-                            [innerText]="selectedLevelProps[prop].isPercent?(selectedLevelProps[prop].value | percent: '1.0-1' | noComma):(selectedLevelProps[prop].value | number: '1.0-0' | noComma)"
-                            [matTooltip]="selectedLevelProps[prop].value" matTooltipPosition="right"></td>
+                        <td class="content-right">
+                            <span
+                                [innerText]="selectedLevelProps[prop].isPercent?(selectedLevelProps[prop].value | percent: '1.0-1' | noComma):(selectedLevelProps[prop].value | number: '1.0-0' | noComma)"
+                                [matTooltip]="selectedLevelProps[prop].value" matTooltipPosition="right">
+                            </span>
+                        </td>
                     </tr>
                     <ng-container *ngFor="let prop of props_sub">
                         <tr *ngIf="selectedLevelProps[prop] && selectedLevelProps[prop].value != 0">
                             <td class="content-left" [innerText]="'PROPS.' + prop | translate"></td>
-                            <td class="content-right"
-                                [innerText]="selectedLevelProps[prop].isPercent?(selectedLevelProps[prop].value | percent: '1.0-1' | noComma):(selectedLevelProps[prop].value | number: '1.0-0' | noComma)"
-                                [matTooltip]="selectedLevelProps[prop].value" matTooltipPosition="right"></td>
+                            <td class="content-right">
+                                <span
+                                    [innerText]="selectedLevelProps[prop].isPercent?(selectedLevelProps[prop].value | percent: '1.0-1' | noComma):(selectedLevelProps[prop].value | number: '1.0-0' | noComma)"
+                                    [matTooltip]="selectedLevelProps[prop].value" matTooltipPosition="right">
+                                </span>
+                            </td>
                         </tr>
                     </ng-container>
                 </table>
