--- a/src/app/root/menu/menu.component.html
+++ b/src/app/root/menu/menu.component.html
@@ -1,7 +1,14 @@
 <mat-nav-list class="menu-list">
   <ng-container *ngFor="let menu of menuList">
     <a mat-list-item (click)="onClick(menu)">
-      {{ menu.names[currentLanguage] }}
+      <ng-container *ngIf="menu.sexType; then player else character"></ng-container>
+      <ng-template #player>
+        <span [innerText]="'PLAYER.' + menu.sexType | translate"></span>
+        <span *ngIf="menu.elementType" [innerText]="'(' + ('ELEMENT.' + menu.elementType | translate) + ')'"></span>
+      </ng-template>
+      <ng-template #character>
+        {{ menu.names[currentLanguage] }}
+      </ng-template>
       <span class="spacer"></span>
       <figure *ngIf="menu.isEnkaData" class="shinshinmoe"></figure>
     </a>
