--- a/src/app/features/character/component/artifact/artifact.component.html
+++ b/src/app/features/character/component/artifact/artifact.component.html
@@ -1,9 +1,10 @@
 <ng-container *ngIf="data.skills.normal.name">
     <mat-card class="card" [style.width.px]="cardWidth" cdkDrag [cdkDragStartDelay]="300" [style.z-index]="zIndex" (cdkDragStarted)="onDrag()">
-        <mat-card-header>
+        <mat-card-header class="header" cdkDragHandle>
             <mat-card-title [innerText]="'ARTIFACT.NAME' | translate"></mat-card-title>
         </mat-card-header>
         <mat-card-content class="content">
+            <mat-divider></mat-divider>
             <mat-tab-group [(selectedIndex)]="selectedIndex" (selectedIndexChange)="setActiveIndex()" animationDuration="0">
                 <mat-tab *ngFor="let tab of tabs; let index = index" [label]="'[  ' + (index + 1) + '  ]'">
                     <div class="artifact-set">
